--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
   },
   "devDependencies": {
     "@types/node": "^18",
+    "@vicons/antd": "^0.12.0",
+    "@vicons/carbon": "^0.12.0",
+    "@vicons/fa": "^0.12.0",
+    "@vicons/fluent": "^0.12.0",
+    "@vicons/ionicons4": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
+    "@vicons/material": "^0.12.0",
+    "@vicons/tabler": "^0.12.0",
     "gsap": "^3.11.5",
+    "naive-ui": "^2.35.0",
     "nuxt": "^3.4.3",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "vfonts": "^0.0.3"
   }
 }
