--- a/package.json
+++ b/package.json
@@ -9,19 +9,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.134",
     "@types/node": "^18",
-    "@vicons/antd": "^0.12.0",
-    "@vicons/carbon": "^0.12.0",
-    "@vicons/fa": "^0.12.0",
-    "@vicons/fluent": "^0.12.0",
-    "@vicons/ionicons4": "^0.12.0",
-    "@vicons/ionicons5": "^0.12.0",
-    "@vicons/material": "^0.12.0",
-    "@vicons/tabler": "^0.12.0",
     "gsap": "^3.11.5",
-    "naive-ui": "^2.35.0",
     "nuxt": "^3.4.3",
+    "rimraf": "^5.0.5",
     "sass": "^1.62.1",
-    "vfonts": "^0.0.3"
+    "unplugin-icons": "^0.17.1"
+  },
+  "dependencies": {
+    "@vueuse/core": "^10.5.0"
   }
 }
