added soundcloud embed

--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@iconify/json": "^2.2.134",
     "@types/node": "^18",
     "gsap": "^3.11.5",
-    "nuxt": "^3.4.3",
+    "nuxt": "3.4.3",
     "rimraf": "^5.0.5",
     "sass": "^1.62.1",
     "unplugin-icons": "^0.17.1"
   },
   "dependencies": {
-    "@vueuse/core": "^10.5.0"
+    "@vueuse/core": "^10.5.0",
+    "@vueuse/nuxt": "^10.5.0"
   }
 }
