--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@iconify/json": "^2.2.134",
+    "@nuxtjs/seo": "^2.0.0-rc.8",
     "@types/node": "^18",
     "gsap": "^3.11.5",
     "nuxt": "3.4.3",
